// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1a4022d88c4664",
  "0042864d705045",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "0470c6d84e3c67",
  "07ec87883d8303",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1152ee5e00a9c5",
  "0fcd003aa134fd",
  "0a7bc7a19c196d",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "177af8ff308856",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "1297ba12699dd7",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "090002547a9be0",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "03e1fd9833de0b",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "0270a2bfaf05bf",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "173fd30a5534b1",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "1e0c9dae21c114",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "0747a646561ee9",
  "0e4db3569f7cc6",
  "0033c969cdb65f",
  "1e2c800c7488d4",
  "151a4865e792cc",
  "0e6b7596b44e8f",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "04cd3cdbc9ff33",
  "033ca8dc6b9aef",
  "1a4f8db291bb10",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "00fd4a639091ab",
  "1e177cfec9272e",
  "0c899f8d401940",
  "072006f3087ef9",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "0468c69bc0a9ad",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "05c2f4bf09ac38",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "1bc92e2652560a",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "10761e7f06747a",
  "12c61b266472ac",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "0004c8f44c8226",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "09d5afcf41f056",
  "09476badc63922",
  "0c9a478b190f14",
  "173ceaf89bc57c",
  "183e6fa57f13e3",
  "0c2b86db737d53",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "081b9986e438a0",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "1db89cfed42bed",
  "13a023cb7733af",
  "0191962f157852",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "0e60bf400f1771",
  "1c862913173a2f",
  "1fbef160ba5563",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "14b265b13b0a70",
  "123ae2de91cb0f",
  "1e58d3b5e46062",
  "0c280608473dc1",
  "131db521b32dd4",
  "0f108d6b7b6fd0",
  "14b7af2ac46b47",
  "18ab0fcaec7f21",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1308626d4251de",
  "07a1db3c4483e2",
  "146fcb9d61e9eb",
  "1eabfe9a425031",
  "0c283441650d8b",
  "16e29531272f46",
  "005cae0faba801",
  "0c8ae9c781bddf",
  "16b9becbe1ea5c",
  "0d76a9dce25b89",
  "1fd1cb52908921",
  "1dd996b5b3efbc",
  "0cb2c1a6a3dbcd",
  "1aa2389f602570",
  "16049bfcbb4eec",
  "085f4be779a84e",
  "05f389c2ee6043",
  "1e1417fd446fc8",
  "0027008fe2faf9",
  "0a4089c1d1ba93",
  "179c5355e4c03d",
  "0e27afeb62b671",
  "0ce119b6d57e26",
  "03ac9e8edeae20",
  "099a09697da63b",
  "0523478561b1df",
  "133da274a7621e",
  "00162d4483f1dc",
  "1f4030d67d1788",
  "022fb5d34a0fb8",
  "0f1f40c76a4fab",
  "069fc7f4dedca9",
  "096e6982b8f7d3",
  "07be242ed4cb4d",
  "1ae5930d30459b",
  "10f628064424da",
  "126afb0c3d108d",
  "070e532f4398be",
  "1e7cb2ea1d7aea",
  "1c92786d67a90b",
  "0042c8b0dbc7cc",
  "1c72c39f710bbb",
  "03c40c6671517a",
  "0ddc2239f8fed6",
  "18bef1a34fb32a",
  "199cad4b2fa210",
  "0c6f4618157976",
  "12cf42450d553b",
  "1b76eda138d077",
  "0dc691b5884bcd",
  "00dd768f806c1d",
  "08901db71f5cfc",
  "1313eec92d401f",
  "00aadee3d78d2e",
  "1da704f12ce7c1",
  "0e952a08a2c1bd",
  "154ec6e158f8ba",
  "0321dc4a266040",
  "123c934e613fdc",
  "1fd36a7cc18f69",
  "0b79d7bf7358c6",
  "1023b3b09d5e11",
  "1994f81e8636f1",
  "0daf49ecf7d2df",
  "1e9587cdd6bdd7",
  "1e284ca4a3423d",
  "0405f5b9a5e251",
  "00b44075614ccd",
  "169837d4e18ac5",
  "1952691be0cc07",
  "1fc5e3fcf790be",
  "0ff7536f9e8b37",
  "1c08b7e7ed8498",
  "08ea8752ade1ef",
  "03795e6ced827d",
  "10f69552f3d803",
  "19da0472814bae",
  "151d0d2f1d059c",
  "1b19c8171569ca",
  "0aa72f6a26db7e",
  "1a3f85850ae4a4",
  "1f40e98c36c377",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "0f2f1fdf3dcc9e",
  "1c574559d2cf70",
  "031a3cfe22700c",
  "14ee78f7b90108",
  "1dcb3d1fbfb74e",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "1417d1979976a8",
  "155fcaeed56be6",
  "06be3a6c6469b0",
  "0636c5e8f576a7",
  "101139cfc40652",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12e936fb87b7f6",
  "01ec0a1495fc3c",
  "0a3746b37d315c",
  "1b8f42fb0713fa",
  "14972aa3f06acf",
  "08050f7f6495ec",
  "181881f41a999c",
  "0883dac6baf369",
  "1b956175dadb93",
  "0791ce03e105c0",
  "0a67661fb354ec",
  "0c7c7891d675ab",
  "1742bda58ecf6e",
  "1f56b7ee8add7f",
  "07a38e203a54cd",
  "0707016f48df58",
  "19e6811a37b2d9",
  "0cb3b7860b1412",
  "0029a30b8c20de",
  "0ee17919795053",
  "0ea1865633d000",
  "16f9c0480b903d",
  "0cf1974c943a26",
  "1202dab3f24394",
  "04d04a27b070ef",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "149480a4a0ccef",
  "18c189019061ed",
  "082ebf4885d6c2",
  "15ee51a0703be5",
  "0e70319671fa71",
  "0e66012806bf98",
  "18c5f156a6c9df",
  "0ac8c1376d43c2",
  "04845edec85c5a",
  "1b96809b9c33df",
  "1eb63c3794de81",
  "10746fe417edad",
  "06e511b5f90142",
  "145b5951ae2735",
  "17f8e68d7e782c",
  "1b2fdec999b972",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "11fa9a34cc2b48",
  "1fd4756d3ce9bb",
  "18b32b3bcc255a",
  "04a0c9d9b114d7",
  "1c3a064089f63e",
  "0c225c0a6d0413",
  "133ead5c70bdee",
  "0e3a8338836748",
  "1a870e0e2168f0",
  "0f759e38ed072c",
  "1c1d4048ddd442",
  "088c164e3875f4",
  "19008235c949ab",
  "19dd2a8a0f06d3",
  "00247d6b2f38b1",
  "18615081f8d847",
  "06e422c9bef7c8",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "11146165f156ec",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "12b4b6a360d105",
  "108e9094e71276",
  "01b2af492c9815",
  "164acfadc229d3",
  "11145337e30c4a",
  "15db8bbe7c3eee",
  "084370b86a6756",
  "19c94adc45f7b1",
  "1ba552dc52f04e",
  "1007030e00fdc4",
  "13a7b1a81f49c6",
  "1346e45d92f87e",
  "0a9b5966fde713",
  "07f67bff9f3218",
  "060ad6cb28112f",
  "1bf637b4f53baf",
  "11b2c25f5b857c",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1a4022d88c4664",
  "123ae2de91cb0f",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1fd1cb52908921",
  "0fcd003aa134fd",
  "0cb2c1a6a3dbcd",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "0027008fe2faf9",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "133da274a7621e",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "07be242ed4cb4d",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "1e7cb2ea1d7aea",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "1b76eda138d077",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "0321dc4a266040",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "00b44075614ccd",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "1a3f85850ae4a4",
  "0e4db3569f7cc6",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "033ca8dc6b9aef",
  "155fcaeed56be6",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "14972aa3f06acf",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "0707016f48df58",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "0ea1865633d000",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "082ebf4885d6c2",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "145b5951ae2735",
  "09476badc63922",
  "0c9a478b190f14",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "18b32b3bcc255a",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "01b2af492c9815",
  "1c862913173a2f",
  "11145337e30c4a",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "01eb8fa958919d",
  "04eb2ea0555f3e",
  "12a650381cfa78",
  "1251861ff9790b",
  "1c6775e25c43b2",
  "14e14bf8c90f4b",
  "061d347674004e",
  "1dfb3a52553c64",
  "05e9e5f17ecac9",
  "14f74082734958",
  "0a5ad66364e86b",
  "0347370d69f64a",
  "06c6abdb9cbd09",
  "017503772ee0da",
  "17dfb42f074302",
  "1030872503e4fd",
  "19d6e45ba55798",
  "04dcb29782de16",
  "03f35da4be8391",
  "05269c2681e82d",
  "14a90cce776d96",
  "14953ed11f1b8a",
  "022ad2dee101dc",
  "13fcb3196d0209",
  "02106f0c565a80",
  "11cab30c56eeb0",
  "13c5dbcf19d289",
  "1fc569966e389c",
  "000914d9b2b826",
  "07f0e6be2f134e",
  "10420f1c1cec25",
  "1b335558429ddb",
  "025dddd6deaa60",
  "152dd719e5ea1b",
  "01a069cda442be",
  "01b204a0b9c36d",
  "13a83a0c63558d",
  "04d9d5406fdbb9",
  "00844be21e11ed",
  "002f304d87ef2f",
  "1525790c9e0cb0",
  "019fb943c00f1f",
  "08112560cdfa56",
  "07c5a0eb5bbc2b",
  "0a76f2e16000bb",
  "0bf324f339b35d",
  "06152216c96595",
  "013106c1d282fe",
  "056a3945f87a0f",
  "19509cb2a6d2e4",
  "125136028060b9",
  "0365e69d1b41e7",
  "09fb30920057a9",
  "0174b1f372b3c9",
  "1ed4f2b68aa251",
  "084e72da0740a3",
  "1a645dffbd93c6",
  "07fc03ad3f174a",
  "1ef43a758e5990",
  "0daaa5791d90ce",
  "0460f870f2e90e",
  "02b916e078dc38",
  "1fc6135def346b",
  "10eab1a5fc9c7e",
  "1cba0fb61d627a",
  "156088a3dab2ba",
  "1037860a707532",
  "1dc54535b145a2",
  "0553b7da8442f0",
  "13b5b74f01b1cb",
  "11c1b6e87e1878",
  "1d26c6d45c4897",
  "0e5e501a59d215",
  "12bde1894af377",
  "18ca457a15bfa1",
  "0d5562c6d0fd0c",
  "0194e33e0deed2",
  "1446d131d5fd1a",
  "0e8c443d70ec85",
  "1bdd1e75bcebe8",
  "0280d71279e95c",
  "0ca051c28c66eb",
  "1557ec2e62c308",
  "122f2b598a2702",
  "004bf66e47d629",
  "07e014b7825340",
  "098766094a0092",
  "055b024296cb5c",
  "17e3a702e236e1",
  "1bc61cee85795d",
  "0ccdb7be61c9d3",
  "0eaf6b9f5248a0",
  "030bbc80243aa7",
  "0090e6efb78516",
  "19e93b47c46750",
  "129d906f6deb8a",
  "1833c7a1bb23c6",
  "1bcf82d4f58ffb",
  "1f92ca5d10140d",
  "0534dcbb317e1e",
  "1afec82991dbf0",
  "0c3f380af2a478",
  "1b050c3ba239d6",
  "0cd2db3363ffa8",
  "19915a9c9afd40",
  "184f7142ab28a7",
  "0d54aa22c17ad2",
  "0f706593c7fd12",
  "165a91dd6bf9b2",
  "10cb6acd9de36a",
  "1cde56a60be801",
  "125f9546e9e37e",
  "0d0f841e8c495c",
  "0a3f91cbbb8a0f",
  "0fa4db56d39250",
  "06be58cde0a167",
  "10ff57a6b27128",
  "100c294d471a4e",
  "05aba55f6fa738",
  "1fea678bd6ac10",
  "1cd3d237e177df",
  "16a86700cbd7a7",
  "078868428184fa",
  "0b55d3c069653a",
  "05ea996ad22499",
  "1793ef52804c13",
  "0ca209e35fc96f",
  "131318002118e8",
  "0540e32e3faa4c",
  "18fc8902dd1c54",
  "14a9826e1fb14e",
  "104505402b5af3",
  "0f90dd64cb00db",
  "0989e862ef0173",
  "17a23bab07072c",
  "0fe162ceacdddb",
  "0a68a90e19a531",
  "124bea08a28b20",
  "1fc360d359553d",
  "076a1047bd7e79",
  "1ad2bfa673e89e",
  "0fd48a9ef3f2b0",
  "133bbabd8002fd",
  "151a1aa9d28f45",
  "1f5a853c308fcf",
  "120fd1bfc4b925",
  "1eb51d2452098f",
  "0e5321aacb9d0d",
  "0b484e67cf67ba",
  "1ea2cb7ccc0ca2",
  "0d343c1e4a0f4b",
  "1ad688e7f003d7",
  "0bd245d4e9ea8c",
  "1366d7fc86e5a5",
  "09dbbbdf2eaf18",
  "162c1b1d0ac0b0",
  "02d1a80d25e061",
  "09e18ea2d8c0d4",
  "055b76b126340d",
  "0fa6e56a904668",
  "1d496f39fca43b",
  "1546d2a03d6f1b",
  "08ab7d38dafa12",
  "0e63e32fe0e4dd",
  "0bad3c9d4469e6",
  "07d7df8dbf72b8",
  "17a96bcc0add15",
  "1bd9db985f90c7",
  "0b0922a14ae44f",
  "02066a59ed6208",
  "09fff08f037a82",
  "104fe0a4e07f65",
  "0a7263fea4aacc",
  "1ecb1befb4af40",
  "0db1f74cc5e2c9",
  "16db2f9870b39e",
  "05198123f3e5e1",
  "03db9e2a7601f5",
  "1f5656f6e8390a",
  "01be45ac7183c7",
  "13c97bb365c313",
  "1d4e3012ad0301",
  "0b6b89028284bf",
  "16b0f4486396e5",
  "1fa29cce87d59a",
  "1616153e33a5d9",
  "16550c733e0f9e",
  "028fe9b23c0867",
  "18c56171d5b3ce",
  "1fd10d13491625",
  "1b9c6d3172875f",
  "009e7aeea10d07",
  "0e1b6e7d9d388b",
  "1a929579b2338f",
  "1586e53874cd3d",
  "1e36d6e4ac60ed",
  "06c8658e669d42",
  "03604b1275ea6c",
  "03dc63182675e5",
  "15e48869aa15b1",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "1df2cbbc8c0913",
  "19a6bb3db08653",
  "0e771b21ecd2ed",
  "0a727907fa10bc",
  "0593c2a3cad974",
  "04dc3dfae4fcf1",
  "061d347674004e",
  "031d64155768f4",
  "05e9e5f17ecac9",
  "01938655f0315b",
  "00c891f1cfc77b",
  "09c91a352552ab",
  "10b713cced991a",
  "027ba4ff4b9edc",
  "0fd23fc2325e94",
  "0f726ac368131e",
  "19d6e45ba55798",
  "0e65388800755f",
  "015f612558b318",
  "0f04cf31826d00",
  "1b102c23dfa2f0",
  "120645223403b0",
  "01b1aa6df7f5b8",
  "16ee2e2aacaa75",
  "0e5a0fee54d9a5",
  "0d1eb5a2c11bba",
  "01649e1689d1d6",
  "0ccfd674311b67",
  "029999ba84a930",
  "03611dcb29151e",
  "0e9801f61c287b",
  "0f0e3026734ebc",
  "1d49a4ed886401",
  "00852d177f2423",
  "06b78d627df94e",
  "01b204a0b9c36d",
  "0986763b3a5cf2",
  "1fcfc9f3377f7b",
  "17e42033cb572f",
  "1bf91a4e08655f",
  "112bb50885aa09",
  "0d638f6d9d85e1",
  "092ea231e15d67",
  "0d6ae4e8053abf",
  "0a2b027b5a0221",
  "126aaf9264215b",
  "07f06713446268",
  "013106c1d282fe",
  "0567ff1b812783",
  "03e1dbd3ed5f15",
  "1262bdc1a51bd7",
  "0365e69d1b41e7",
  "09f8fc8ed7f16b",
  "0174b1f372b3c9",
  "162251c3978c2a",
  "142d15db30d3b3",
  "02782ffbf7d141",
  "07fc03ad3f174a",
  "12e8a844296dd1",
  "1f108dc51a0813",
  "1a5741b2da388a",
  "1b46b628a9a802",
  "09c958fd8f6a52",
  "10eab1a5fc9c7e",
  "0d7cf965a4c15e",
  "156088a3dab2ba",
  "06ff35dfc97470",
  "1f2ead9cabad45",
  "0fd3f826fcc424",
  "1fbe831aafaf34",
  "0bf3e17f9e279f",
  "1229318081aeef",
  "0d6e9f6ef5bc1a",
  "0dec265485ba9b",
  "00fc1130799aba",
  "183c21238c6edf",
  "1ee58c06651695",
  "1d254139569a10",
  "1c9c04b5ec064d",
  "1630cbb6cbde43",
  "0cd71bc91b08a6",
  "0ca051c28c66eb",
  "155673edc08496",
  "18bef12fbd9382",
  "1d9df478548541",
  "1ceea328c65c90",
  "06923465880da4",
  "08c107feaf41c0",
  "059cc53f6970b3",
  "1dd4a74eadb30a",
  "05a49be6fd8c9a",
  "00564436ed53f1",
  "0a09dff14916b9",
  "04c7974c9e3c26",
  "040a24cf425a4f",
  "12b912e0864e14",
  "080d67a3f77fbc",
  "05b4f9a82dba87",
  "1f92ca5d10140d",
  "1b4666737cb6ac",
  "1c1c8f224679cb",
  "1e5bd18d626808",
  "1b050c3ba239d6",
  "0509d79eb546b6",
  "09dcc3e92e19ee",
  "1aa866c2d1357e",
  "12ad3425bbaab7",
  "0b80010c6f12e5",
  "0a7dc86ccf4647",
  "192f547dbf3fd4",
  "082bc552750a15",
  "125f9546e9e37e",
  "038e4ae5628d8d",
  "1f22c10de74744",
  "00ee7402960a95",
  "19336d35ab9e53",
  "1680f5757c3cbe",
  "1c541efd8619d6",
  "0e232858ba113d",
  "082a562e56336c",
  "1cd3d237e177df",
  "0dfa283a91a962",
  "078868428184fa",
  "050ed87b116bab",
  "1280bbfa70091e",
  "0db4bfa919a9a2",
  "00a43fdc58415f",
  "02401d8ff94e6e",
  "04713a93aef577",
  "18fc8902dd1c54",
  "0f309c1af88f59",
  "1fe2c4b74db582",
  "08c33fe20e3c91",
  "1e17b8b42dcfd0",
  "18e05d6c269d62",
  "0fe162ceacdddb",
  "0ebd7e58f2546d",
  "0a6c6f806f968f",
  "0e417674519c8b",
  "141f56425c122e",
  "1ad2bfa673e89e",
  "18f96374a69cf8",
  "133bbabd8002fd",
  "033e25e0f2fead",
  "1e8b079485db9a",
  "1dafd19bead42b",
  "1eb51d2452098f",
  "1dc243808fab8c",
  "0c4bc8b0c96314",
  "11a4e9a4ad24fc",
  "082365d5352120",
  "03056ee24440a7",
  "12cd66b91e9594",
  "0eba52f62968c4",
  "0a9a87d73128e1",
  "0f155319fd261f",
  "1396a813585bd3",
  "198a810406a64f",
  "1cbf32eed12b89",
  "1dc443b0ba6fb1",
  "08affc579ed368",
  "0ad4e6c29c7f27",
  "11b7e29aaa103b",
  "10c4580679bb20",
  "0bad3c9d4469e6",
  "0f15a6fb8b1dbc",
  "17a96bcc0add15",
  "115380a1980b12",
  "0227426d2ce1c5",
  "1634c1e28fa6df",
  "09fff08f037a82",
  "18c3fbaad181a1",
  "13a02d12b4b8f1",
  "0aedaa678f2807",
  "11c3244fb6dd53",
  "192f9c5a83a4fc",
  "1e1879a917740a",
  "1affa311a3f6d9",
  "1f5656f6e8390a",
  "0eced1f18d038c",
  "1edd8a49634041",
  "1d4e3012ad0301",
  "0b6b89028284bf",
  "0294c4c37b5e04",
  "0dcb10cd12824f",
  "14c4166a6ebb72",
  "0184754f65b4dd",
  "109c880d92ff5f",
  "0b29c1ac5b58f0",
  "03c6567a7ce65d",
  "17c8a6595f671b",
  "1b37bf739f4252",
  "0ccc960b1b05fe",
  "07049a2e29a434",
  "14c8666ebc0ead",
  "1e36d6e4ac60ed",
  "1f9e91b1f12f7e",
  "0cd992669dec7e",
  "06081bb77163d2",
  "1af20dcc32d065",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "01eb8fa958919d",
  "19a6bb3db08653",
  "12a650381cfa78",
  "1251861ff9790b",
  "1c6775e25c43b2",
  "14e14bf8c90f4b",
  "061d347674004e",
  "1dfb3a52553c64",
  "05e9e5f17ecac9",
  "01938655f0315b",
  "00c891f1cfc77b",
  "0347370d69f64a",
  "06c6abdb9cbd09",
  "017503772ee0da",
  "17dfb42f074302",
  "1030872503e4fd",
  "19d6e45ba55798",
  "04dcb29782de16",
  "03f35da4be8391",
  "05269c2681e82d",
  "14a90cce776d96",
  "120645223403b0",
  "022ad2dee101dc",
  "16ee2e2aacaa75",
  "02106f0c565a80",
  "11cab30c56eeb0",
  "13c5dbcf19d289",
  "1fc569966e389c",
  "000914d9b2b826",
  "03611dcb29151e",
  "10420f1c1cec25",
  "1b335558429ddb",
  "025dddd6deaa60",
  "152dd719e5ea1b",
  "01a069cda442be",
  "01b204a0b9c36d",
  "13a83a0c63558d",
  "1fcfc9f3377f7b",
  "00844be21e11ed",
  "002f304d87ef2f",
  "1525790c9e0cb0",
  "019fb943c00f1f",
  "08112560cdfa56",
  "07c5a0eb5bbc2b",
  "0a2b027b5a0221",
  "0bf324f339b35d",
  "06152216c96595",
  "013106c1d282fe",
  "056a3945f87a0f",
  "03e1dbd3ed5f15",
  "125136028060b9",
  "0365e69d1b41e7",
  "09fb30920057a9",
  "0174b1f372b3c9",
  "1ed4f2b68aa251",
  "084e72da0740a3",
  "1a645dffbd93c6",
  "07fc03ad3f174a",
  "1ef43a758e5990",
  "1f108dc51a0813",
  "0460f870f2e90e",
  "02b916e078dc38",
  "1fc6135def346b",
  "10eab1a5fc9c7e",
  "1cba0fb61d627a",
  "156088a3dab2ba",
  "1037860a707532",
  "1dc54535b145a2",
  "0fd3f826fcc424",
  "13b5b74f01b1cb",
  "11c1b6e87e1878",
  "1d26c6d45c4897",
  "0e5e501a59d215",
  "12bde1894af377",
  "18ca457a15bfa1",
  "0d5562c6d0fd0c",
  "0194e33e0deed2",
  "1446d131d5fd1a",
  "1c9c04b5ec064d",
  "1bdd1e75bcebe8",
  "0280d71279e95c",
  "0ca051c28c66eb",
  "1557ec2e62c308",
  "122f2b598a2702",
  "004bf66e47d629",
  "07e014b7825340",
  "098766094a0092",
  "055b024296cb5c",
  "17e3a702e236e1",
  "1bc61cee85795d",
  "0ccdb7be61c9d3",
  "00564436ed53f1",
  "030bbc80243aa7",
  "04c7974c9e3c26",
  "040a24cf425a4f",
  "12b912e0864e14",
  "080d67a3f77fbc",
  "1bcf82d4f58ffb",
  "1f92ca5d10140d",
  "0534dcbb317e1e",
  "1afec82991dbf0",
  "0c3f380af2a478",
  "1b050c3ba239d6",
  "0509d79eb546b6",
  "19915a9c9afd40",
  "1aa866c2d1357e",
  "0d54aa22c17ad2",
  "0f706593c7fd12",
  "165a91dd6bf9b2",
  "192f547dbf3fd4",
  "082bc552750a15",
  "125f9546e9e37e",
  "038e4ae5628d8d",
  "0a3f91cbbb8a0f",
  "0fa4db56d39250",
  "06be58cde0a167",
  "10ff57a6b27128",
  "1c541efd8619d6",
  "05aba55f6fa738",
  "1fea678bd6ac10",
  "1cd3d237e177df",
  "16a86700cbd7a7",
  "078868428184fa",
  "0b55d3c069653a",
  "05ea996ad22499",
  "1793ef52804c13",
  "0ca209e35fc96f",
  "131318002118e8",
  "04713a93aef577",
  "18fc8902dd1c54",
  "14a9826e1fb14e",
  "104505402b5af3",
  "0f90dd64cb00db",
  "1e17b8b42dcfd0",
  "17a23bab07072c",
  "0fe162ceacdddb",
  "0a68a90e19a531",
  "124bea08a28b20",
  "0e417674519c8b",
  "141f56425c122e",
  "1ad2bfa673e89e",
  "0fd48a9ef3f2b0",
  "133bbabd8002fd",
  "033e25e0f2fead",
  "1f5a853c308fcf",
  "120fd1bfc4b925",
  "1eb51d2452098f",
  "0e5321aacb9d0d",
  "0b484e67cf67ba",
  "1ea2cb7ccc0ca2",
  "0d343c1e4a0f4b",
  "1ad688e7f003d7",
  "0bd245d4e9ea8c",
  "1366d7fc86e5a5",
  "0a9a87d73128e1",
  "162c1b1d0ac0b0",
  "02d1a80d25e061",
  "198a810406a64f",
  "1cbf32eed12b89",
  "1dc443b0ba6fb1",
  "1d496f39fca43b",
  "1546d2a03d6f1b",
  "11b7e29aaa103b",
  "0e63e32fe0e4dd",
  "0bad3c9d4469e6",
  "07d7df8dbf72b8",
  "17a96bcc0add15",
  "1bd9db985f90c7",
  "0b0922a14ae44f",
  "02066a59ed6208",
  "09fff08f037a82",
  "104fe0a4e07f65",
  "0a7263fea4aacc",
  "1ecb1befb4af40",
  "0db1f74cc5e2c9",
  "16db2f9870b39e",
  "05198123f3e5e1",
  "1affa311a3f6d9",
  "1f5656f6e8390a",
  "0eced1f18d038c",
  "13c97bb365c313",
  "1d4e3012ad0301",
  "0b6b89028284bf",
  "16b0f4486396e5",
  "1fa29cce87d59a",
  "14c4166a6ebb72",
  "16550c733e0f9e",
  "109c880d92ff5f",
  "18c56171d5b3ce",
  "1fd10d13491625",
  "1b9c6d3172875f",
  "009e7aeea10d07",
  "0e1b6e7d9d388b",
  "1a929579b2338f",
  "1586e53874cd3d",
  "1e36d6e4ac60ed",
  "06c8658e669d42",
  "03604b1275ea6c",
  "03dc63182675e5",
  "15e48869aa15b1",
]
`;
